syntax = "proto3";

option go_package="/protos";

import "google/api/annotations.proto";

// define empty message
message HealthRequest {}

message HealthResponse {
    int32 statusCode = 1;
    string status = 2;
    string message = 3;
}

service Health {
    rpc Health(HealthRequest) returns(HealthResponse) {
        option (google.api.http) = {
            get: "/health"
            body: "*"
        };
    }
}